<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.photoslist.PhotosListFragment">

    <data>

        <variable
            name="property"
            type="com.hemnet.assignment.data.models.Property" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="@dimen/dimen_4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/back"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name"
                app:titleTextAppearance="@style/Toolbar.TextAppearance" />

            <ImageView
                android:id="@+id/iv_property_image"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_0dp"
                android:scaleType="fitCenter"
                app:layout_constraintDimensionRatio="1.33:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:loadImage="@{property.image}"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_highlighter"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_0dp"
                android:src="@drawable/golden_highlighter"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/iv_property_image"
                app:layout_constraintEnd_toEndOf="@+id/iv_property_image"
                app:layout_constraintStart_toStartOf="@+id/iv_property_image"
                app:layout_constraintTop_toTopOf="@+id/iv_property_image" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dimen_15dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dimen_15dp" />

            <TextView
                android:id="@+id/tv_property_street_address"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{property.streetAddress}"
                android:textAppearance="@style/Toolbar.TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/cb_fav"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/iv_property_image" />

            <CheckBox
                android:id="@+id/cb_fav"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="@{property.fav}"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/tv_property_street_address"
                app:layout_constraintTop_toTopOf="@id/tv_property_street_address" />

            <ImageView
                android:id="@+id/iv_home_icon"
                android:layout_width="@dimen/dimen_25dp"
                android:layout_height="@dimen/dimen_25dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/home_icon"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_street_address" />

            <TextView
                android:id="@+id/tv_property_area"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{property.area + `, ` + property.municipality  }"
                android:textColor="@color/black_light_1"
                android:textSize="@dimen/font_18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@+id/iv_home_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_street_address"
                app:layout_constraintTop_toTopOf="@+id/iv_home_icon" />

            <TextView
                android:id="@+id/tv_property_price_title"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="2"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/beg_rt_pris"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toStartOf="@id/tv_property_price"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_area" />

            <TextView
                android:id="@+id/tv_property_price"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:gravity="start"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@{property.askingPrice }"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/tv_property_price_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_area" />

            <TextView
                android:id="@+id/tv_property_space_title"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="2"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/boarea"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toStartOf="@id/tv_property_space"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_price_title" />

            <TextView
                android:id="@+id/tv_property_space"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:gravity="start"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@{property.livingArea + ` m²` }"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/tv_property_space_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_price_title" />

            <TextView
                android:id="@+id/tv_property_rooms_title"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="2"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/antal_rum"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toStartOf="@id/tv_property_rooms"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_space_title" />

            <TextView
                android:id="@+id/tv_property_rooms"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:gravity="start"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@{property.numberOfRooms + ` rum`}"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/tv_property_rooms_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_space_title" />

            <TextView
                android:id="@+id/tv_property_days_title"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="2"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/dagar"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toStartOf="@id/tv_property_days"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tv_property_rooms_title" />

            <TextView
                android:id="@+id/tv_property_days"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:gravity="start"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@{ property.daysOnHemnet }"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toEndOf="@id/tv_property_days_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_property_rooms_title" />

            <TextView
                android:id="@+id/tv_dummy_detail_text"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:gravity="start"
                android:justificationMode="inter_word"
                android:paddingBottom="@dimen/dimen_10dp"
                android:text="@string/dummy_text"
                android:textColor="@color/black_light_2"
                android:textSize="@dimen/font_12sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/tv_property_days_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>